--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "sikyrae",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^5.9.0",
+    "eslint-config-egg": "^7.1.0",
     "jest": "^23.6.0",
-    "nodemo": "^1.0.0"
+    "nodemo": "^1.0.0",
+    "supertest": "^3.3.0"
   }
 }
