--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint-config-egg": "^7.1.0",
     "jest": "^23.6.0",
     "nodemon": "^1.18.9",
-    "supertest": "^3.3.0"
+    "supertest": "^3.3.0",
+    "wbin": "0.0.7"
   }
 }
